samples/_failures_safe/1761599160_198ae9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5dc9c101.c: In function ‘main’:
./samples/SAFE/__tmp_5dc9c101.c:139:16: error: expected expression at end of input
  139 |     op = (enum Operation)(choice -
      |                ^~~~~~~~~
./samples/SAFE/__tmp_5dc9c101.c:139:16: error: expected declaration or statement at end of input
